# modern-data-stack

./: .env.example  .gitignore  Dockerfile.airflow  README.md  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml
config/: pipeline_config.py
config/dbt/: .user.yml  profiles.yml
config/pgadmin/: servers.json
dags/: etl_dag.py
dbt/: dbt_project.yml
dbt/macros/: generate_schema_name.sql
dbt/models/: schema.yml
dbt/models/bronze/: sources.yml
dbt/models/gold/: fct_clima_diario.sql  fct_clima_mensal.sql  fct_template.sql  schema.yml
dbt/models/marts/: mart_template.sql
dbt/models/silver/: schema.yml  stg_openmeteo.sql  stg_template.sql
dbt/models/staging/: sources.yml  stg_template.sql
notebooks/: analysis_data.ipynb
scripts/: backfill_historico.py
src/: extract_data.py  flatten_data.py  load_data.py  transform_data.py
src/common/: database.py  logger.py
tests/: conftest.py
tests/unit/: test_extract.py  test_flatten.py  test_transform.py
