[project]
name = "etl-pipeline"
version = "0.1.0"
description = "Pipeline ETL modular — Airflow + dbt + PostgreSQL + Docker"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pandas>=3.0.2",
    "pyarrow>=18.0.0",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]
notebook = [
    "jupyter>=1.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 100
target-version = "py312"
